--- a/MobileEvents/app/src/main/AndroidManifest.xml
+++ b/MobileEvents/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.examenTodos">
+          package="com.example.examenEvents">
 
     <uses-feature
             android:name="android.hardware.camera"
@@ -22,7 +22,7 @@
             android:supportsRtl="true"
             android:usesCleartextTraffic="true"
             android:theme="@style/AppTheme">
-        <activity android:name="com.example.examenTodos.MainActivity">
+        <activity android:name="com.example.examenEvents.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -30,12 +30,12 @@
             </intent-filter>
         </activity>
         <activity
-                android:name="com.example.examenTodos.DetailsActivity"
+                android:name="com.example.examenEvents.DetailsActivity"
                 android:label="Details"
-                android:parentActivityName="com.example.examenTodos.MainActivity">
+                android:parentActivityName="com.example.examenEvents.MainActivity">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
-                    android:value="com.example.examenTodos.MainActivity"/>
+                    android:value="com.example.examenEvents.MainActivity"/>
 
             <intent-filter>
                 <action android:name="android.intent.action.SEND"/>
